<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/feedback">

        <Preference
            app:key="send_feedback"
            app:icon="@drawable/ic_baseline_feedback_24"
            app:title="@string/send_feedback" />

    </PreferenceCategory>


    <PreferenceCategory app:title="@string/development">

    <Preference
        app:key="developer"
        app:icon="@drawable/ic_baseline_person_outline_24"
        app:title="@string/developer" />

    <Preference
        app:key="source_code"
        app:icon="@drawable/ic_baseline_code_24"
        app:title="@string/source_code" />

    </PreferenceCategory>

</PreferenceScreen>