<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".ui.home.HomeFragment">

    <com.yonder.statelayout.StateLayoutView
        android:id="@+id/stateLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/space_8"
        app:textEmpty="@string/title_no_weight"
        tools:context=".ui.home.HomeFragment">



        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cvOutline"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:cardCornerRadius="@dimen/space_12"
            app:cardElevation="0dp"
            app:cardUseCompatPadding="true"
            app:layout_constraintBottom_toTopOf="@+id/cvSummary"
            app:layout_constraintDimensionRatio="16:12"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/space_8">

                <com.github.mikephil.charting.charts.LineChart
                    android:id="@+id/lineChart"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />

                <com.github.mikephil.charting.charts.BarChart
                    android:id="@+id/barChart"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
            </FrameLayout>


        </com.google.android.material.card.MaterialCardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cvSummary"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:cardBackgroundColor="@color/purple_200"
            app:cardCornerRadius="@dimen/space_8"
            app:cardElevation="0dp"
            app:cardUseCompatPadding="true"
            app:contentPadding="@dimen/space_8"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cvOutline">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvGoalDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:drawablePadding="@dimen/space_8"
                android:fontFamily="@font/poppins_medium"
                android:gravity="center"
                android:textColor="@color/white"
                app:drawableLeftCompat="@drawable/ic_baseline_info_24"
                tools:text="Hedefine ulaşmana 10 kilo kaldı">

            </androidx.appcompat.widget.AppCompatTextView>

        </androidx.cardview.widget.CardView>


        <Button
            android:id="@+id/btnAddWeightForToday"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/space_4"
            android:text="@string/add_weight_for_today"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cvSummary">

        </Button>

        <TextView
            android:id="@+id/tvSummary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/space_8"
            android:layout_marginStart="@dimen/space_4"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/dashboard"
            android:textAppearance="?android:textAppearanceLarge"
            app:layout_constraintBottom_toTopOf="@+id/llContainer"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnAddWeightForToday" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvInfoCard"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvSummary"
            tools:itemCount="6"
            tools:listitem="@layout/item_home_info_card">

        </androidx.recyclerview.widget.RecyclerView>

    </com.yonder.statelayout.StateLayoutView>


</androidx.core.widget.NestedScrollView>
